; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mthca/extr_mthca_av.c_mthca_ah_grh_present.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mthca/extr_mthca_av.c_mthca_ah_grh_present.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mthca_ah = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mthca_ah_grh_present(%struct.mthca_ah* %0) #0 {
  %2 = alloca %struct.mthca_ah*, align 8
  store %struct.mthca_ah* %0, %struct.mthca_ah** %2, align 8
  %3 = load %struct.mthca_ah*, %struct.mthca_ah** %2, align 8
  %4 = getelementptr inbounds %struct.mthca_ah, %struct.mthca_ah* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = and i32 %7, 128
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
